서브페이지 생성

--- a/cat.html
+++ b/cat.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>고양이 - 동물 정보 모바일</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
   <header>
@@ -21,54 +22,6 @@
   <section id="pet">
     <h1>고양이</h1>
     <ul class="pet-list">
-      <li>
-        <a href="#">
-          <img src="images/dog01.jpg" alt="dog01">
-          <div class="caption">
-            <h4>개이름01</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog02.jpg" alt="dog02">
-          <div class="caption">
-            <h4>개이름02</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog03.jpg" alt="dog03">
-          <div class="caption">
-            <h4>개이름03</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog04.jpg" alt="dog04">
-          <div class="caption">
-            <h4>개이름04</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog05.jpg" alt="dog05">
-          <div class="caption">
-            <h4>개이름05</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog06.jpg" alt="dog06">
-          <div class="caption">
-            <h4>개이름06</h4>
-          </div>
-        </a>
-      </li>
     </ul>
   </section>
 </body>
