--- a/index.html
+++ b/index.html
@@ -22,55 +22,17 @@
   <section id="pet">
     <h1>개</h1>
     <ul class="pet-list">
-      <li>
+      <!-- <li>
         <a href="#">
           <img src="images/dog01.jpg" alt="dog01">
           <div class="caption">
             <h4>개이름01</h4>
           </div>
         </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog02.jpg" alt="dog02">
-          <div class="caption">
-            <h4>개이름02</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog03.jpg" alt="dog03">
-          <div class="caption">
-            <h4>개이름03</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog04.jpg" alt="dog04">
-          <div class="caption">
-            <h4>개이름04</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog05.jpg" alt="dog05">
-          <div class="caption">
-            <h4>개이름05</h4>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="images/dog06.jpg" alt="dog06">
-          <div class="caption">
-            <h4>개이름06</h4>
-          </div>
-        </a>
-      </li>
+      </li> -->
     </ul>
   </section>
+
+  <script src="main.js"></script>
 </body>
 </html>
