서브페이지 query

--- a/birds.html
+++ b/birds.html
@@ -13,9 +13,9 @@
     <h1>동물정보</h1>
     <nav>
       <ul>
-        <li><a href="./">개</a></li>
-        <li><a href="cat.html">고양이</a></li>
-        <li class="active"><a href="birds.html">새</a></li>
+        <li><a href="./?type=dog">개</a></li>
+        <li><a href="cat.html?type=cat">고양이</a></li>
+        <li class="active"><a href="birds.html?type=bird">새</a></li>
       </ul>
     </nav>
   </header>
